--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -3,7 +3,12 @@
     package="com.dabaicai.video">
 
     <application>
-        <activity android:name=".PlayerActivity"></activity>
+        <activity android:name=".PlayerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".MainActivity2" />
     </application>
 
