--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.dabaicai.video">
 
     <application>
-        <activity android:name=".PlayerActivity">
-        </activity>
+        <activity android:name=".GLPlayerActivity"></activity>
+        <activity android:name=".PlayerActivity"></activity>
         <activity android:name=".MainActivity2" />
     </application>
 
